# src/main/resources/static/restapidoc/restapi-demo-swagger.yaml
@@ -62,6 +62,8 @@ responses:
     description: |
       Resource not found. Wrong resource path was used. In case of paths with ID invalid ID might
       have been provided.
+    schema:
+      $ref: "#/definitions/Error"
 paths:
   /boxes:
     get:
@@ -113,6 +115,13 @@ paths:
       - box
       summary: "Read a box"
       operationId: "readBox"
+      parameters:
+      - name: "boxId"
+        in: "path"
+        description: "ID of box to return"
+        required: true
+        type: "integer"
+        format: "int64"
       responses:
         200:
           description: "Box was found and returned."
@@ -129,6 +138,13 @@ paths:
         * For existing ID it updates the box.
         * How to do markup
       operationId: "updateBox"
+      parameters:
+      - name: "boxId"
+        in: "path"
+        description: "ID of box to update"
+        required: true
+        type: "integer"
+        format: "int64"
       responses:
         200:
           description: "Box was successfully created or updated and its current content returned."
@@ -143,7 +159,14 @@ paths:
         Deletes the box if it is empty. Deletion fails if the box is not empty, it must be emptied
         before either by moving all its items somewhere else or by emptying the whole box.
       operationId: "deleteBox"
-      responses:
+      parameters:
+        - name: "boxId"
+          in: "path"
+          description: "ID of box to delete"
+          required: true
+          type: "integer"
+          format: "int64"
+    responses:
         204:
           $ref: "#/responses/noContent"
         400:
@@ -151,7 +174,7 @@ paths:
           schema:
             $ref: "#/definitions/Error"
         404:
-          $ref: "#/responses/notFound"
+          $ref: "#/responses/notF ound"
   /boxes/{boxId}/empty:
     post:
       tags:
